--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition": "^0.15.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@typechain/ethers-v6": "^0.5.1",
-    "hardhat": "^2.22.18"
+    "dotenv": "^16.4.7",
+    "hardhat": "^2.22.19"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7"
+    "@openzeppelin/contracts": "^5.2.0"
   }
 }
